--- a/final/client/package.json
+++ b/final/client/package.json
@@ -37,12 +37,16 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
+    "@types/enzyme": "^3.10.10",
+    "@types/enzyme-adapter-react-16": "^1.0.6",
     "@types/jest": "^29.1.1",
     "@types/node": "^18.7.3",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
     "@types/react-router": "^5.1.19",
     "artillery": "^2.0.0-23",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.7",
     "npm-watch": "^0.11.0"
   }
 }
